<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">First Name</string>
    <string name="edit_last_name">Last Name</string>
    <string name="button_send">Send</string>
    <string name="title">Please Enter Your Info</string>
    <string name="user_list_title">User List</string>
    <string name="name_title">Full Name</string>
    <string name="id_title">ID</string>
    <string name="admin_switch">Admin</string>
    <string name="admin_toggle_on">You are an Admin</string>
    <string name="admin_toggle_off"></string>
    <string name="admin_on">On</string>
    <string name="admin_off">Off</string>
    <string name="invalid_name_error">Name Could Not Be Submitted</string>
</resources>
